<resources>
    <string name="app_name">library</string>
    <string name="sun">Min</string>
    <string name="mon">Sen</string>
    <string name="tue">Sel</string>
    <string name="wed">Rab</string>
    <string name="thr">Kam</string>
    <string name="fri">Jum</string>
    <string name="sat">Sab</string>
    <string name="cant_select_prev_date">Kamu tidak bisa memilih tanggal yang sudah lewat</string>
</resources>
