<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#fff"
        android:minHeight="340dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_marginLeft="20dp"
                    android:layout_centerVertical="true"
                    android:id="@+id/btnPrevMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_arrow_left" />

                <TextView
                    android:layout_centerInParent="true"
                    android:id="@+id/txtDayText"
                    android:layout_width="138dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:textColor="#0A72CD"
                    android:textSize="14sp" />

                <ImageButton
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:id="@+id/btnNextMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_arrow_right" />
            </RelativeLayout>

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#eeeeee" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:paddingLeft="14dp"
            android:paddingRight="14dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sun"
                android:textColor="#ff434343"
                android:textStyle="bold"
                android:textSize="10sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mon"
                android:textColor="#ff434343"
                android:textStyle="bold"
                android:textSize="10sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tue"
                android:textColor="#ff434343"
                android:textStyle="bold"
                android:textSize="10sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wed"
                android:textColor="#ff434343"
                android:textStyle="bold"
                android:textSize="10sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/thr"
                android:textColor="#ff434343"
                android:textStyle="bold"
                android:textSize="10sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fri"
                android:textColor="#ff434343"
                android:textStyle="bold"
                android:textSize="10sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sat"
                android:textColor="#ff434343"
                android:textStyle="bold"
                android:textSize="10sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#eeeeee" />

        <GridView
            android:padding="14dp"
            android:id="@+id/gridView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:listSelector="#00ffffff"
            android:numColumns="7"
            android:verticalSpacing="2dp" />
    </LinearLayout>

</FrameLayout>